deploy: 20bd60ebb285161fe577fec490612dbace53226e

--- a/print.html
+++ b/print.html
@@ -308,11 +308,11 @@ architecto beatae vitae dicta sunt explicabo.</p>
     <div class="meta">
 
       <div class="upper-row">
-        <h3 class="job-title">Senior Software Engineer</h3>
-        <div class="time">2014 - 2015</div>
+        <h3 class="job-title">Full Stack Software Developer</h3>
+        <div class="time">2021 - 2024</div>
       </div><!--//upper-row-->
 
-      <div class="company">Google, London</div>
+      <div class="company">Tier1 S.A. Seville</div>
 
     </div><!--//meta-->
 
