deploy: 8aac7bae307b9ba5a74033655e383ff76354f450

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ Second paragraph if required.</p>
     <div class="meta">
 
       <div class="upper-row">
-        <h3 class="job-title">Lead Developer</h3>
+        <h3 class="job-title">Software Engineer</h3>
         <div class="time">2024 - Present</div>
       </div><!--//upper-row-->
 
