deploy: b766e6fed8abfadf8ec75dded4188b787ad1cd05

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
     
     <li class="linkedin"><i class="fab fa-linkedin"></i>
-      <a href="https://linkedin.com/in/alandoe" target="_blank">alandoe</a>
+      <a href="https://linkedin.com/in/eduardo-diaz-dominguez" target="_blank">eduardo-diaz-dominguez</a>
     </li>
     
 
