deploy: c32f4816bbcf2c5543836c872ad470eb6527dfd9

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ Exposure through Legacy System maintenance and development:</li>
       <ul>
   <li>Creation &amp; Development of PostGresSQL for scientific geolocation database.</li>
   <li>Stack: PostGresSQL, Database Administration &amp; design, Python</li>
-  <li>ref: littleoakey@savethekoala.com</li>
+  <li>ref: davidmurraygrant@gmail.com ; littleoakey@savethekoala.com</li>
 </ul>
 
     </div><!--//details-->
